# OpenScan-BH_SPC

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AcquisitionCompletion.hpp  AcquisitionControl.cpp  AcquisitionControl.h  BH_SPC150.c  BH_SPC150.h  BH_SPC150Private.h  BH_SPC150Settings.c  DataSender.hpp  DataStream.cpp  DataStream.hpp  FIFOAcquisition.cpp  FIFOAcquisition.hpp  MemMapFile.hpp  OpenScanBHSPC.sln  OpenScanBHSPC.vcxproj  OpenScanBHSPC.vcxproj.filters  README.md  RateCounters.cpp  RateCounters.h  RateCounters.hpp  SDTFile.c  SDTFile.h  SDTFileWriter.hpp  SPCFileWriter.hpp  TempDir.hpp  UDPSender.hpp  UniqueFileName.c  UniqueFileName.h  ZipCompress.c  ZipCompress.h  fix-SPC_data_file_structure-header.py  fix-spc-data-file-structure-h.sh  meson.build
src/: AcquisitionCompletion.hpp  AcquisitionControl.cpp  AcquisitionControl.h  BH_SPC150.c  BH_SPC150Private.h  BH_SPC150Settings.c  DataStream.cpp  FIFOAcquisition.cpp  FIFOAcquisition.hpp  MetadataJson.hpp  RateCounters.h  SPCFileWriter.hpp  UniqueFileName.c  UniqueFileName.h
src/Replay/: Replay.cpp
src/SDTFile/: SDTFile.c  SDTFile.h  SDTFileWriter.hpp  ZipCompress.c  ZipCompress.h
src/Sender/: DataSender.hpp  MemMapFile.hpp  UDPSender.hpp
subprojects/: .gitignore  OpenScanLib.wrap
subprojects/FLIMEvents/: meson.build
subprojects/FLIMEvents/examples/: BHSPCFile.hpp  meson.build
subprojects/FLIMEvents/examples/DumpSPC/: DumpSPC.cpp  meson.build
subprojects/FLIMEvents/examples/SPCToHistogram/: SPCToHistogram.cpp  meson.build
subprojects/FLIMEvents/include/: meson.build
subprojects/FLIMEvents/include/FLIMEvents/: BHDeviceEvent.hpp  Histogram.hpp  LineClockPixellator.hpp
subprojects/FLIMEvents/test/FLIMEventsTests/: BHDeviceEventTests.cpp  LineClockPixellatorTests.cpp
subprojects/FLIMEvents/test/include/catch2/: catch.hpp
subprojects/libzip/: meson.build  meson_options.txt
